2020-06-10  Anuj Verma  <anujv@iitbhilai.ac.in>

	[sdf-outline] ported the remaining part of `get_min_distance'
	to `FT_Fixed'. Now the entire function use fixed point and works
	for all types of curves.
	
	* [bug] sdfgen.c (solve_cubic_quation): The function has overflow
	  in very specific cases. ( example: Martel.ttf, glyph: 69 ). This
	  cause the internal `discriminant' to wrap around and give invalid
	  value.
	* sdfgen.c (solve_quadratic_quation): Added quaddratic solver function
	  because in some cases the coefficient of `x^3' is `0'.

2020-06-08  Anuj Verma  <anujv@iitbhilai.ac.in>

	[sdf-outline] ported the current `get_min_distance' function
	to do calculatiion in `FT_Fixed'. Currently only works for
	line and quaddratic edge type.
	
	* sdfgen.c (get_min_distance): changed all computation to use
	  fixed point instead of floats.
	* sdfgen.c (solve_cubic_quation): also changed this function to
	  use fixed point.

2020-06-01  Anuj Verma  <anujv@iitbhilai.ac.in>

	[sdf-outline] combined edges belonging to a contour together
	and also added overlapping support. (which currently dosen't
	work properly for fonts with cubic bezier curves)

	* sdfgen.h (SDF_Contour): added struct which represent one
	  contour (i.e. a collection of edges)
	* sdfgen.h (SDF_Contour_Orientation, get_contour_orientation):
	  added enum for contour orientation, and a function which can
	  be used to get orientation of a single contour.
	* sdfgen.h (get_min_conour): added function which returns
	  shortest distance from a point to a contour.

2020-05-30  Anuj Verma  <anujv@iitbhilai.ac.in>

	* sdfgen.h (Generate_SDF): added an `spread' parameter
	  which is used to specify the maximum distance value.
	  Any distance greater than it will be discarded.
	  Also, now the distance is calculaed from the center of
	  the pixel (previously is was being calculated from the
	  bottom left corner).

2020-05-30  Anuj Verma  <anujv@iitbhilai.ac.in>
