@@ -8,33 +8,36 @@
 #ifndef EXT_H_
 #define EXT_H_
 
+  #define SCALE ( double )( 1 << 16 )
+
   static FT_Fixed
   arc_cos( FT_Fixed  val )
   {
-    double  temp    = ( double )val / 65536;
+    double  temp    = ( double )val / SCALE;
     double  arccos  = acos( temp );
 
     arccos *= 180 / M_PI;
-    return ( FT_Fixed )( arccos * 65536 );
+    return ( FT_Fixed )( arccos * SCALE );
   }
 
   static FT_Fixed
-  square_root( FT_Fixed val )
+  square_root( FT_Fixed  val )
   {
-    double  temp    = ( double )val / 65536;
+    double  temp    = ( double )val / SCALE;
     double  root    = sqrt( temp );
 
-    return ( FT_Fixed )( root * 65536 );
+    return ( FT_Fixed )( root * SCALE );
   }
 
   static FT_Fixed
   cube_root( FT_Fixed val )
   {
-    double  temp    = ( double )val / 65536;
+    double  temp    = ( double )val / SCALE;
     double  root    = cbrt( temp );
 
-    return ( FT_Fixed )( root * 65536 );
+    return ( FT_Fixed )( root * SCALE );
   }
+
 
 #endif /* EXT_H_ */
 
